--- a/src/main/resources/de/dfki/mary/voicebuilding/templates/mary-template.xml
+++ b/src/main/resources/de/dfki/mary/voicebuilding/templates/mary-template.xml
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<maryxml version="0.4"
+<?xml version="1.0" encoding="UTF-8"?>
+<maryxml xmlns="http://mary.dfki.de/2002/MaryXML"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://mary.dfki.de/2002/MaryXML"
-         xml:lang="en-US">
-$text
+         version="0.5"
+         xml:lang="$locale">
+<p>
+    $text
+</p>
 </maryxml>
